--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 </head>
 <body>
 <main>
-  <artcile class="card">
+  <article class="card">
     <div class="container">
       <img src="./images/image-qr-code.png" alt="qr code">
-      <div class="title"><h2>Improve your front-end skills by building projects</h2></div>
+      <div class="title"><h1>Improve your front-end skills by building projects</h1></div>
       <div class="desc">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</div>
     </div>
-  </artcile>
+  </article>
 </main>
 
   
